# native_postgrest_parser

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deno.json  docker-compose.yml  example.ts  package.json  postgrest_parser.d.ts
.github/workflows/: ci.yml  release.yml
benches/: parser_bench.rs
docs/: BENCHMARKS.md  FULL_PARITY_PLAN.md  INTEGRATION_TESTS.md  LIMITATIONS.md  MUTATION_PLAN.md  README.md  RUST_REVIEW.md  TYPESCRIPT_GUIDE.md  WASM_API.md
e2e/: package.json  test.mjs
examples/: FEATURE_COVERAGE.md  typescript_client_example.ts  wasm_example.ts  wasm_mutations_example.ts
pkg/: LICENSE  README.md  client.d.ts  client.js  client.ts  package.json  postgrest_parser.d.ts  postgrest_parser.js  postgrest_parser_bg.wasm  postgrest_parser_bg.wasm.d.ts  tsconfig.json  types.d.ts  types.js  types.ts
scripts/: post-build.sh
src/: lib.rs  schema_cache.rs  wasm.rs
src/ast/: field.rs  filter.rs  logic.rs  mod.rs  mutation.rs  order.rs  params.rs  prefer.rs  rpc.rs  schema.rs  select.rs
src/error/: mod.rs  parse.rs  sql.rs
src/parser/: body.rs  common.rs  filter.rs  logic.rs  mod.rs  mutation.rs  order.rs  prefer.rs  rpc.rs  schema.rs  select.rs
src/sql/: builder.rs  mod.rs  mutation.rs  rpc.rs
tests/: README.md  integration_full_queries.rs  integration_relations.rs
tests/integration/: README.md  wasm_test.ts
